添加代码注释

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,15 +1,13 @@
 server:
   port: 8080
 
+
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/teaching_management?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/teaching?serverTimezone=UTC
     username: root
-    password: rootroot
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
-    hikari:
-      minimum-idle: 5
-      maximum-pool-size: 20
   jpa:
     hibernate:
       ddl-auto: update
