--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -29,12 +29,18 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.mysql</groupId>
+             <groupId>com.mysql</groupId>
             <artifactId>mysql-connector-j</artifactId>
+             <version>8.0.33</version>
+             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>com.github.xiaoymin</groupId>
