--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -4,9 +4,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/teaching?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/teaching_management?serverTimezone=UTC
     username: root
-    password: root
+    password: rootroot
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
