--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,10 +1,14 @@
 server:
   port: 8080
+  servlet:
+    context-path: /
+    favicon:
+      enabled: false
 
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/teaching_management?serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/teaching_management?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
     password: rootroot
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -12,3 +16,46 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+
+# JWT Configuration
+app:
+  jwt:
+    secret: your-secret-key-here-must-be-at-least-32-characters-long
+    expiration: 86400000  # 24 hours in milliseconds
+
+# Knife4j Configuration
+knife4j:
+  enable: true
+  setting:
+    language: zh-CN
+    enable-swagger-models: true
+    enable-document-manage: true
+    swagger-model-name: 实体类列表
+    enable-version: false
+    enable-reload-cache-parameter: false
+    enable-after-script: true
+    enable-filter-multipart-api-method-type: POST
+    enable-filter-multipart-apis: false
+    enable-request-cache: true
+    enable-host: false
+    enable-host-text: 
+    enable-home-custom: false
+    home-custom-path: classpath:markdown/home.md
+    enable-search: true
+    enable-footer: false
+    enable-footer-custom: true
+    footer-custom-content: 
+    enable-dynamic-parameter: false
+    enable-debug: true
+    enable-open-api: true
+    enable-group: true
+  cors: false
+  production: false
+  basic:
+    enable: false
+    username: test
+    password: 123456
